fixtures/cs-rng-01/good/top-level-ui-seed.ts
const hue = Math.random();

export { hue };
