fixtures/cs-rng-01/bad/generate-token-arrow.ts
const generateToken = () => Math.random();

export { generateToken };
